# zurihac-workshop

./: .dir-locals.el  .envrc  .gitignore  cabal.project  cabal.project.local  flake.nix
session1/: Task1.hs  session1.cabal
session1/src/: Operational1.hs  Operational2.hs  Task1.hs  Task2.hs  Task3.hs
session1/test/: Task1Spec.hs
