cabal-version:      2.4
name:               session1
version:            0.1.0.0
synopsis:           The Legend of DSLs - Workshop presented at ZuriHac 2022
homepage:
license:
author:             Alejandro Serrano
maintainer:         trupill@gmail.com
extra-source-files: README.md

common common-options
  build-depends:      base >=4.9 && <5
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields -fdefer-typed-holes

library
  import:           common-options
  hs-source-dirs:   src
  exposed-modules:
    Operational1
    Operational2
    Task1
    Task2
    Task3

  -- other-modules:
  build-depends:
    , base               >=4.14
    , generic-arbitrary
    , monad-loops
    , mtl
    , random             >=1.2
    , tasty
    , tasty-quickcheck
    , text

  default-language: Haskell2010
  ghc-options:      -fdefer-typed-holes

test-suite session1-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Driver.hs
  build-depends:
    , containers
    , hspec
    , session1
    , tasty
    , tasty-hspec
    , tasty-hunit
    , tasty-quickcheck

  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wno-missing-home-modules
